--- a/Sheng_APP/templates/a.html
+++ b/Sheng_APP/templates/a.html
@@ -11,4 +11,13 @@
 	<body>
         <div style="background-color:black;height:100px"></div>
 	</body>
+	<script type="text/javascript">
+		var x=[1,2,3,1,3,2,4,4,1]
+		var t={}
+		for(var c in x){
+			if(c in t)t[c]+=1
+			else t[c]=1
+		}
+		for(var m in t)console.log(t[m])
+	</script>
 </html>
