call_trump_add_wait

--- a/Sheng_APP/templates/game.html
+++ b/Sheng_APP/templates/game.html
@@ -63,8 +63,6 @@
                         </div>
                     </div>
                     <div id="partner_card">
-                        <img src="/static/img/poker/2D.jpg" class="card_figure img470">
-                        <img src="/static/img/poker/2H.jpg" class="card_figure img480">
                     </div>
                 </div>
                 <div style="height: 120px;">
@@ -80,23 +78,11 @@
                             <font size="5" style="color:#ffff41" id="rival1_ready">未准备</font>
                         </div>
                     </div>
-                    <div id="rival1_cards" style="float:left">
-                        <img src="/static/img/poker/2D.jpg" class="card_figure img350">
-                        <img src="/static/img/poker/2H.jpg" class="card_figure img360">
+                    <div id="rival1_card" style="float:left">
                     </div>
-                    <div id="di_cards">
-                        <img src="/static/img/poker/2D.jpg" class="card_figure img440">
-                        <img src="/static/img/poker/2H.jpg" class="card_figure img450">
-                        <img src="/static/img/poker/2D.jpg" class="card_figure img460">
-                        <img src="/static/img/poker/2H.jpg" class="card_figure img470">
-                        <img src="/static/img/poker/2D.jpg" class="card_figure img480">
-                        <img src="/static/img/poker/2H.jpg" class="card_figure img490">
-                        <img src="/static/img/poker/2D.jpg" class="card_figure img500">
-                        <img src="/static/img/poker/2H.jpg" class="card_figure img510">
+                    <div id="di_card">
                     </div>
-                    <div id="rival2_cards" style="float:right">
-                        <img src="/static/img/poker/2D.jpg" class="card_figure img590">
-                        <img src="/static/img/poker/2H.jpg" class="card_figure img600">
+                    <div id="rival2_card" style="float:right">
                     </div>
                     <div id="rival2 information" style="float: right;">
                         <div id="rival2 img">
@@ -112,8 +98,6 @@
                     <!-- interval -->
                 </div>
                 <div id="out_card">
-                        <img src="/static/img/poker/2D.jpg" class="card_figure img470">
-                        <img src="/static/img/poker/2H.jpg" class="card_figure img480">
                 </div>
                 <div style="height: 140px;">
                     <!-- interval -->
