--- a/Sheng_APP/templates/game.html
+++ b/Sheng_APP/templates/game.html
@@ -58,7 +58,7 @@
                             <img src="/static/img/nake.jpeg" class="user_figure" style="position:absolute;display: inline;left:45%;">
                         <!-- </div> -->
                         <div id="partner name" style="position:absolute;display: inline;left:53%;">
-                            <font size="5" style="color:#41ffe3" id="partner_name2">Yuri</font><br/>
+                            <font size="5" style="color:#41ffe3" id="partner_name2"></font><br/>
                             <font size="5" style="color:#ffff41" id="partner_ready">未准备</font>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                             <img src="/static/img/nake.jpeg" class="user_figure">
                         </div>
                         <div id="rival1 name">
-                            <font size="5" style="color:#41ffe3" id="rival1_name">1</font><br/>
+                            <font size="5" style="color:#41ffe3" id="rival1_name"></font><br/>
                             <font size="5" style="color:#ffff41" id="rival1_ready">未准备</font>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                             <img src="/static/img/nake.jpeg" class="user_figure">
                         </div>
                         <div id="rival2 name">
-                            <font size="5" style="color:#41ffe3" id="rival2_name">1</font><br/>
+                            <font size="5" style="color:#41ffe3" id="rival2_name"></font><br/>
                             <font size="5" style="color:#ffff41" id="rival2_ready">未准备</font>
                         </div>
                     </div>
@@ -121,6 +121,9 @@
                 </div>
                 <div>
                     <button type="button" class="btn btn-default navbar-btn" style="text-align:center;width: 70px;">底牌</button>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-default navbar-btn" style="text-align:center;width: 70px;" onclick="reallocate()">重新发牌</button>
                 </div>
             </div>
         </div>
