--- a/Sheng_APP/templates/game.html
+++ b/Sheng_APP/templates/game.html
@@ -147,7 +147,10 @@
                     <button type="button" class="btn btn-default navbar-btn" style="text-align:center;width: 70px;"  onclick="di_pai()">底牌</button>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-default navbar-btn" style="text-align:center;width: 70px;" onclick="reallocate()">重新发牌</button>
+                    <button type="button" class="btn btn-default navbar-btn hide" style="text-align:center;width: 70px;" onclick="reallocate()">重新发牌</button>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-default navbar-btn" style="text-align:center;width: 70px;" onclick="modify()" id="modify_data">修改信息</button>
                 </div>
             </div>
         </div>
