--- a/Sheng_APP/templates/game.html
+++ b/Sheng_APP/templates/game.html
@@ -141,7 +141,7 @@
                     <button type="button"  class="btn btn-default navbar-btn" style="text-align:center;width: 70px;" onclick="self_ready()" id="zhunbei">准备</button>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-default navbar-btn" style="text-align:center;width: 70px;">上一轮</button>
+                    <button type="button" class="btn btn-default navbar-btn" style="text-align:center;width: 70px;" onclick="show_last_cards()">上一轮</button>
                 </div>
                 <div>
                     <button type="button" class="btn btn-default navbar-btn" style="text-align:center;width: 70px;"  onclick="di_pai()">底牌</button>
